--- a/frappe/public/scss/desk/sidebar.scss
+++ b/frappe/public/scss/desk/sidebar.scss
@@ -123,61 +123,6 @@ body[data-route^="Module"] .main-menu {
 			}
 		}
 	}
-
-	.sidebar-image-section {
-		width: min(100%, 170px);
-		cursor: pointer;
-		border-radius: var(--border-radius-lg);
-
-		.sidebar-image {
-			height: auto;
-			max-height: 170px;
-			object-fit: cover;
-		}
-
-		.standard-image {
-			font-size: 52px;
-			border-radius: var(--border-radius-lg);
-		}
-
-		.sidebar-image-wrapper {
-			position: relative;
-		}
-
-		.sidebar-image,
-		.sidebar-standard-image {
-			transition: opacity 0.3s;
-			border-radius: var(--border-radius-lg);
-			border: 1px solid var(--border-color);
-		}
-
-		.sidebar-image-wrapper:hover {
-			.sidebar-image,
-			.sidebar-standard-image {
-				opacity: 0.5;
-			}
-			.sidebar-image-actions {
-				display: block;
-			}
-		}
-		.sidebar-image-actions {
-			display: none;
-			position: absolute;
-			top: 50%;
-			right: 0;
-			left: 0;
-			transform: translateY(-50%);
-			text-align: center;
-			z-index: 1;
-		}
-		// TODO: find better fix
-		.sidebar-standard-image {
-			.standard-image {
-				height: 0;
-				padding: 50% 0;
-			}
-		}
-	}
 }
 
 .layout-side-section {
