--- a/frappe/public/scss/desk/user_profile.scss
+++ b/frappe/public/scss/desk/user_profile.scss
@@ -53,7 +53,7 @@
 }
 
 .user-profile-sidebar {
-	.sidebar-image {
+	.display-image {
 		width: 100%;
 		height: 100%;
 		border-radius: var(--border-radius-lg);
